Fix #2605: User display name cropped in profile header

--- a/static/less/panel.less
+++ b/static/less/panel.less
@@ -142,7 +142,6 @@
                 color: #fff;
                 max-width: 600px;
                 white-space: nowrap;
-                overflow: hidden;
                 text-overflow: ellipsis;
             }
             h2 {
